--- a/src/Zym/Bundle/NodeBundle/Resources/views/NodeTypes/delete.html.twig
+++ b/src/Zym/Bundle/NodeBundle/Resources/views/NodeTypes/delete.html.twig
@@ -20,7 +20,7 @@
         {{ form_rest(form) }}
         
         <fieldset class="form-actions">
-            <input class="btn danger" type="submit" value="{{ 'Delete' | trans({}, 'ZymNodeBundle') }}" />
+            <input class="btn btn-danger" type="submit" value="{{ 'Delete' | trans({}, 'ZymNodeBundle') }}" />
             <a class="btn" href="{{ path('zym_node_node_types') }}">{{ 'Cancel' | trans({}, 'ZymNodeBundle') }}</a>
         </fieldset>
     </form>
