--- a/src/Zym/Bundle/SecurityBundle/Resources/views/AccessRules/list.html.twig
+++ b/src/Zym/Bundle/SecurityBundle/Resources/views/AccessRules/list.html.twig
@@ -14,7 +14,7 @@
         <div class="btn-group">
             {% if is_granted('CREATE', ['class', 'Zym\\Bundle\\SecurityBundle\\Entity\\AccessRule']) %}
             <a class="btn" href="{{ path('zym_security_access_rules_add') }}">
-                <i class="icon plus"></i>
+                <i class="icon-plus"></i>
                 {{ 'New Rule' | trans({}, 'ZymSecurityBundle') }}
             </a>
             {% endif %}
@@ -43,14 +43,14 @@
                     <div class="btn-group">
                         {% if is_granted('EDIT', rule) %}
                         <a class="btn" href="{{ path('zym_security_access_rules_edit', { 'id': rule.id })}}">
-                            <i class="icon edit"></i>
+                            <i class="icon-edit"></i>
                             {{ 'Edit' | trans({}, 'ZymSecurityBundle') }}
                         </a>
                         {% endif %}
 
                         {% if is_granted('DELETE', rule) %}
                         <a class="btn" href="{{ path('zym_security_access_rules_delete', { 'id': rule.id })}}"  data-toggle="ajax-modal">
-                            <i class="icon remove"></i>
+                            <i class="icon-remove"></i>
                             {{ 'Delete' | trans({}, 'ZymSecurityBundle') }}
                         </a>
                         {% endif %}
