--- a/src/Zym/Bundle/SecurityBundle/Resources/views/AclRoles/delete.html.twig
+++ b/src/Zym/Bundle/SecurityBundle/Resources/views/AclRoles/delete.html.twig
@@ -15,7 +15,7 @@
         {{ form_rest(form) }}
         
         <fieldset class="form-actions">
-            <input class="btn danger" type="submit" value="{{ 'Delete' | trans }}" />
+            <input class="btn btn-danger" type="submit" value="{{ 'Delete' | trans }}" />
             <a class="btn" href="{{ path('zym_security_acl_roles') }}" class="button">{{ 'Cancel' |trans({}, 'ZymSecurityBundle') }}</a>
         </fieldset>
     </form>
