--- a/src/Zym/Bundle/UserBundle/Resources/views/Groups/edit.html.twig
+++ b/src/Zym/Bundle/UserBundle/Resources/views/Groups/edit.html.twig
@@ -11,23 +11,31 @@
     </div>
 
     <div class="btn-group">
-        <a class="btn" href="{{ path('zym_user_groups') }}">{{ 'Groups' | trans({}, 'ZymUserBundle') }}</a>
+        <a class="btn" href="javascript: history.back()">
+            <i class="icon-arrow-left"></i> {{ 'Back' | trans({}, 'ZymUserBundle') }}
+        </a>
 
         {% if is_granted('VIEW', group) %}
-        <a class="btn" href="{{ path('zym_user_groups_show', { "id": group.id }) }}">{{ 'View' | trans({}, 'ZymUserBundle') }}</a>
+        <a class="btn" href="{{ path('zym_user_groups_show', { "id": group.id }) }}">
+            <i class="icon-share"></i> 
+            {{ 'View' | trans({}, 'ZymUserBundle') }}
+        </a>
         {% endif %}
 
         {% if is_granted('DELETE', group) %}
-        <a class="btn" href="{{ path('zym_user_groups_delete', { "id": group.id }) }}">{{ 'Delete' | trans({}, 'ZymUserBundle') }}</a>
+        <a class="btn" href="{{ path('zym_user_groups_delete', { "id": group.id }) }}">
+            <i class="icon-remove"></i>
+            {{ 'Delete' | trans({}, 'ZymUserBundle') }}
+        </a>
         {% endif %}
     </div>
 
-    <form class="horizontal-form" action="" method="post" {{ form_enctype(form) }}>
+    <form class="form-horizontal" action="" method="post" {{ form_enctype(form) }}>
         {{ form_rest(form) }}
 
         <fieldset class="form-actions">
-             <input class="btn primary large" type="submit" value="{{ 'Save changes' | trans({}, 'ZymUserBundle') }}" />
-             <a class="btn large" href="{{ path('zym_user_groups_show', { "id": group.id }) }}">{{ 'Cancel' | trans({}, 'ZymUserBundle') }}</a>
+            <button class="btn btn-primary" type="submit">{{ 'Save changes' | trans({}, 'ZymUserBundle') }}</button>
+            <button class="btn" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymUserBundle') }}</button>
          </fieldset>
     </form>
 {% endblock content %}
