--- a/src/Zym/Bundle/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Zym/Bundle/UserBundle/Resources/views/Security/login.html.twig
@@ -20,7 +20,7 @@
         <label for="remember_me">{{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}</label>
         
         <fieldset class="form-actions">
-            <input class="btn primary" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
+            <input class="btn btn-primary" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
         </fieldset>
     </form>
 {% endblock %}
