--- a/src/Zym/Bundle/UserBundle/Resources/views/Users/delete.html.twig
+++ b/src/Zym/Bundle/UserBundle/Resources/views/Users/delete.html.twig
@@ -20,7 +20,7 @@
         {{ form_rest(form) }}
 
         <fieldset class="form-actions">
-            <input class="btn danger" type="submit" value="{{ 'Delete' | trans({}, 'ZymUserBundle') }}" />
+            <input class="btn btn-danger" type="submit" value="{{ 'Delete' | trans({}, 'ZymUserBundle') }}" />
             <a class="btn" href="{{ path('zym_user_users') }}" class="button">{{ 'Cancel' | trans({}, 'ZymUserBundle') }}</a>
         </fieldset>
     </form>
