--- a/src/Zym/Bundle/MenuBundle/Resources/views/Menus/delete.html.twig
+++ b/src/Zym/Bundle/MenuBundle/Resources/views/Menus/delete.html.twig
@@ -15,7 +15,7 @@
         {{ form_rest(form) }}
         
         <fieldset class="form-actions">
-            <input class="btn danger" type="submit" value="{{ 'Delete' | trans({}, 'ZymMenuBundle') }}" />
+            <input class="btn btn-danger" type="submit" value="{{ 'Delete' | trans({}, 'ZymMenuBundle') }}" />
             <a class="btn" href="{{ path('zym_menus') }}">{{ 'Cancel' | trans({}, 'ZymMenuBundle') }}</a>
         </fieldset>
     </form>
