--- a/src/Zym/Bundle/MenuBundle/Resources/views/Menus/deleteMenuItem.html.twig
+++ b/src/Zym/Bundle/MenuBundle/Resources/views/Menus/deleteMenuItem.html.twig
@@ -12,7 +12,7 @@
         {{ form_rest(form) }}
         
         <fieldset class="form-actions">
-            <input class="btn danger" type="submit" value="{{ 'Delete' | trans({}, 'ZymMenuBundle') }}" />
+            <input class="btn btn-danger" type="submit" value="{{ 'Delete' | trans({}, 'ZymMenuBundle') }}" />
             <a href="{{ path('zym_menus') }}" class="button">{{ 'Cancel' | trans({}, 'ZymMenuBundle' )}}</a>
         </fieldset>
     </form>
