--- a/src/Zym/Bundle/MenuBundle/Resources/views/Menus/edit.html.twig
+++ b/src/Zym/Bundle/MenuBundle/Resources/views/Menus/edit.html.twig
@@ -13,14 +13,14 @@
     <div class="btn-toolbar">
         <div class="btn-group">
             <a class="btn" href="javascript: history.back();">
-                <i class="icon arrow-left"></i>
+                <i class="icon-arrow-left"></i>
                 {{ 'Back' | trans({}, 'ZymMenuBundle') }}
             </a>
         </div>
 
         <div class="btn-group">
             <a class="btn" href="{{ path('zym_security_acl_object_aces', { 'type': 'Zym\\Bundle\\MenuBundle\\Entity\\Menu', 'identifier': menu.name }) }}">
-                <i class="icon lock"></i>
+                <i class="icon-lock"></i>
                 {{ 'Permissions' | trans({}, 'ZymMenuBundle') }}
             </a>
         </div>
@@ -30,8 +30,8 @@
         {{ form_rest(form) }}
 
         <fieldset class="form-actions">
-            <input class="btn primary" type="submit" value="{{ 'Save changes' | trans({}, 'ZymMenuBundle') }}" />
-            <a class="btn" href="{{ path('zym_menus') }}">{{ 'Cancel' | trans({}, 'ZymMenuBundle') }}</a>
+            <button class="btn btn-primary" type="submit">{{ 'Save changes' | trans({}, 'ZymMenuBundle') }}</button>
+            <button class="btn" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymMenuBundle') }}</button>
         </fieldset>
     </form>
 {% endblock content %}
