--- a/src/Zym/Bundle/MenuBundle/Resources/views/Menus/list.html.twig
+++ b/src/Zym/Bundle/MenuBundle/Resources/views/Menus/list.html.twig
@@ -13,7 +13,7 @@
             <div class="btn-group pull-right">
                 {% if is_granted('CREATE', ['class', 'Zym\\Bundle\\MenuBundle\\Entity\\Menu']) %}
                 <a class="btn" href="{{ path('zym_menus_add') }}">
-                    <i class="icon plus"></i>
+                    <i class="icon-plus"></i>
                     {{ 'New Menu' | trans({}, 'ZymMenuBundle') }}
                 </a>
                 {% endif %}
@@ -43,20 +43,20 @@
                 <td>
                     <div class="btn-group" style="width: 300px">
                         <a class="btn" href="{{ path('zym_menus_show', { 'id': menu.name }) }}">
-                            <i class="icon share"></i>
+                            <i class="icon-share"></i>
                             {{ 'View' | trans({}, 'ZymMenuBundle') }}
                         </a>
 
                         {% if is_granted('EDIT', menu) %}
                         <a class="btn" href="{{ path('zym_menus_edit', { 'id': menu.name }) }}">
-                            <i class="icon edit"></i>
+                            <i class="icon-edit"></i>
                             {{ 'Edit' | trans({}, 'ZymMenuBundle') }}
                         </a>
                         {% endif %}
 
                         {% if is_granted('DELETE', menu) %}
                         <a class="btn" href="{{ path('zym_menus_delete', { 'id': menu.name }) }}" data-toggle="ajax-modal">
-                            <i class="icon remove"></i>
+                            <i class="icon-remove"></i>
                             {{ 'Delete' | trans({}, 'ZymMenuBundle') }}
                         </a>
                         {% endif %}
