--- a/src/Zym/Bundle/MenuBundle/Resources/views/Menus/show.html.twig
+++ b/src/Zym/Bundle/MenuBundle/Resources/views/Menus/show.html.twig
@@ -1,6 +1,6 @@
 {% extends "ZymMenuBundle::layout.html.twig" %}
 
-{% block title %}{{ 'Showing Menu' | trans({}, 'RAPPBackendBundle') }}{% endblock %}
+{% block title %}{{ 'Showing Menu' | trans({}, 'ZymMenuBundle') }}{% endblock %}
 
 
 {% macro loopMenuItem(menuItem) %}
@@ -21,15 +21,15 @@
 {% block content %}
     <div class="page-header">
         <h1>
-            {{ menu.label | trans({}, 'ZymNodeBundle') |e }}
-            <small>{{ menu.name | trans({}, 'ZymNodeBundle') |e }}</small>
+            {{ menu.label | trans({}, 'ZymMenuBundle') |e }}
+            <small>{{ menu.name | trans({}, 'ZymMenuBundle') |e }}</small>
         </h1>
     </div>
 
     <div class="btn-toolbar">
         <div class="btn-group">
             <a class="btn" href="javascript: history.back();">
-                <i class="icon arrow-left"></i>
+                <i class="icon-arrow-left"></i>
                 {{ 'Back' | trans({}, 'ZymMenuBundle') }}
             </a>
         </div>
@@ -37,7 +37,7 @@
         <div class="btn-group">
             {% if is_granted('EDIT', menu) %}
             <a class="btn" href="{{ path('zym_menus_edit', { 'id': menu.name }) }}">
-                <i class="icon edit"></i>
+                <i class="icon-edit"></i>
                 {{ 'Edit' | trans({}, 'ZymMenuBundle') }}
             </a>
             {% endif %}
@@ -53,7 +53,7 @@
 
                 <li>
                     <a href="{{ path('zym_menus_delete', { 'id': menu.name }) }}" data-toggle="ajax-modal">
-                        <i class="icon remove"></i>
+                        <i class="icon-remove"></i>
                         {{ 'Delete' | trans({}, 'ZymMenuBundle') }}
                     </a>
                 </li>
@@ -63,7 +63,7 @@
 
         <div class="btn-group">
             <a class="btn" href="{{ path('zym_security_acl_object_aces', { 'type': 'Zym\\Bundle\\MenuBundle\\Entity\\Menu', 'identifier': menu.name }) }}">
-                <i class="icon lock"></i>
+                <i class="icon-lock"></i>
                 {{ 'Permissions' | trans({}, 'ZymMenuBundle') }}
             </a>
         </div>
@@ -92,6 +92,4 @@
         </li>
         {% endfor %}
     </ul>
-
-
 {% endblock content %}
