--- a/src/Zym/Bundle/NodeBundle/Resources/views/NodeTypes/list.html.twig
+++ b/src/Zym/Bundle/NodeBundle/Resources/views/NodeTypes/list.html.twig
@@ -14,7 +14,7 @@
         <div class="btn-group">
             {% if is_granted('CREATE', ['class', 'Zym\\Bundle\\NodeBundle\\Entity\\NodeType']) %}
             <a  class="btn" href="{{ path('zym_node_node_types_add') }}">
-                <i class="icon plus"></i>
+                <i class="icon-plus"></i>
                 {{ 'New Content Type' | trans({}, 'ZymNodeBundle') }}
             </a>
             {% endif %}
@@ -22,7 +22,7 @@
 
         <div class="btn-group">
             <a class="btn" href="{{ path('zym_nodes') }}">
-                <i class="icon cog"></i>
+                <i class="icon-cog"></i>
                 {{ 'Content' | trans({}, 'ZymNodeBundle') }}
             </a>
             <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
@@ -31,7 +31,7 @@
             <ul class="dropdown-menu">
                 <li>
                     <a href="{{ path('zym_nodes_add') }}" data-toggle="ajax-modal">
-                        <i class="icon plus"></i>
+                        <i class="icon-plus"></i>
                         {{ 'Add Content' | trans({}, 'ZymNodeBundle') }}
                     </a>
                 </li>
@@ -57,14 +57,14 @@
                     <div class="btn-group">
                         {% if is_granted('EDIT', nodeType) %}
                         <a class="btn" href="{{ path('zym_node_node_types_edit', { 'type': nodeType }) }}">
-                            <i class="icon edit"></i>
+                            <i class="icon-edit"></i>
                             {{ 'Edit' | trans({}, 'ZymNodeBundle') }}
                         </a>
                         {% endif %}
 
                         {% if is_granted('DELETE', nodeType) %}
                         <a class="btn" href="{{ path('zym_node_node_types_delete', { 'type': nodeType })}}" data-toggle="ajax-modal">
-                            <i class="icon remove"></i>
+                            <i class="icon-remove"></i>
                             {{ 'Delete' | trans({}, 'ZymNodeBundle') }}
                         </a>
                         {% endif %}
