--- a/src/Zym/Bundle/NodeBundle/Resources/views/Nodes/list.html.twig
+++ b/src/Zym/Bundle/NodeBundle/Resources/views/Nodes/list.html.twig
@@ -14,14 +14,14 @@
     <div class="btn-toolbar">
         <div class="btn-group">
             {% if is_granted('CREATE', ['class', 'Zym\\Bundle\\NodeBundle\\Entity\\Node']) %}
-            <a  class="btn" href="{{ path('zym_nodes_add') }}" data-toggle="ajax-modal"><i class="icon plus"></i>{{ 'New Content' | trans({}, 'ZymNodeBundle') }}</a>
+            <a  class="btn" href="{{ path('zym_nodes_add') }}" data-toggle="ajax-modal"><i class="icon-plus"></i>{{ 'New Content' | trans({}, 'ZymNodeBundle') }}</a>
             {% endif %}
         </div>
 
         {% if is_granted('VIEW', ['class', 'Zym\\Bundle\\NodeBundle\\Entity\\NodeType']) %}
         <div class="btn-group">
             <a class="btn" href="{{ path('zym_node_node_types') }}">
-                <i class="icon cog"></i>
+                <i class="icon-cog"></i>
                 {{ 'Content Types' | trans({}, 'ZymNodeBundle') }}
             </a>
             <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
@@ -31,7 +31,7 @@
                 {% if is_granted('CREATE', ['class', 'Zym\\Bundle\\NodeBundle\\Entity\\NodeType']) %}
                 <li>
                     <a href="{{ path('zym_node_node_types_add') }}">
-                        <i class="icon plus"></i>
+                        <i class="icon-plus"></i>
                         {{ 'Add Content Type' | trans({}, 'ZymNodeBundle') }}
                     </a>
                 </li>
@@ -61,21 +61,21 @@
                     <div class="btn-group">
                         {% if is_granted('VIEW', node) %}
                         <a class="btn" href="{{ path('zym_nodes_node', { 'id': node.id })}}">
-                            <i class="icon share"></i>
+                            <i class="icon-share"></i>
                             {{ 'View' | trans({}, 'ZymNodeBundle') }}
                         </a>
                         {% endif %}
 
                         {% if is_granted('EDIT', node) %}
                         <a class="btn" href="{{ path('zym_nodes_edit', { 'id': node.id })}}">
-                            <i class="icon edit"></i>
+                            <i class="icon-edit"></i>
                             {{ 'Edit' | trans({}, 'ZymNodeBundle') }}
                         </a>
                         {% endif %}
 
                         {% if is_granted('DELETE', node) %}
                         <a class="btn" href="{{ path('zym_node_nodes_delete', { 'id': node.id })}}"  data-toggle="ajax-modal">
-                            <i class="icon remove"></i>
+                            <i class="icon-remove"></i>
                             {{ 'Delete' | trans({}, 'ZymNodeBundle') }}
                         </a>
                         {% endif %}
