--- a/src/Zym/Bundle/UserBundle/Resources/views/Groups/delete.ajax.twig
+++ b/src/Zym/Bundle/UserBundle/Resources/views/Groups/delete.ajax.twig
@@ -14,7 +14,7 @@
 <div class="modal-footer">
     <form action="{{ path('zym_user_groups_delete', { 'id' : group.id }) }}" method="post" {{ form_enctype(form) }}>
         {{ form_rest(form) }}
-        <input class="btn danger" type="submit" value="{{ 'Confirm Deletion' | trans({}, 'ZymUserBundle') }}" />
+        <input class="btn btn-danger" type="submit" value="{{ 'Confirm Deletion' | trans({}, 'ZymUserBundle') }}" />
         <a href="#" class="btn" data-dismiss="modal">{{ 'Cancel' | trans({}, 'ZymUserBundle') }}</a>
     </form>
 </div>
