--- a/src/Zym/Bundle/UserBundle/Resources/views/Groups/list.html.twig
+++ b/src/Zym/Bundle/UserBundle/Resources/views/Groups/list.html.twig
@@ -14,7 +14,7 @@
         <div class="btn-group">
             {% if is_granted('CREATE', ['class', 'Zym\\Bundle\\UserBundle\\Entity\\Group']) %}
             <a class="btn" href="{{ path('zym_user_groups_add') }}">
-                <i class="icon plus"></i>
+                <i class="icon-plus"></i>
                 {{ 'Add Group' | trans({}, 'ZymUserBundle') }}
             </a>
             {% endif %}
@@ -27,7 +27,7 @@
             <ul class="dropdown-menu">
                 <li>
                     <a href="{{ path('zym_security_acl_roles_add') }}">
-                        <i class="icon plus"></i>
+                        <i class="icon-plus"></i>
                         {{ 'Add Role' | trans({}, 'ZymUserBundle') }}
                     </a>
                 </li>
@@ -55,21 +55,21 @@
                     <div class="btn-group">
                         {% if is_granted('VIEW', group) %}
                         <a class="btn" href="{{ path('zym_user_groups_show', { 'id': group.id }) }}">
-                            <i class="icon share"></i>
+                            <i class="icon-share"></i>
                             {{ 'View' | trans({}, 'ZymUserBundle') }}
                         </a>
                         {% endif %}
 
                         {% if is_granted('EDIT', group) %}
                         <a class="btn" href="{{ path('zym_user_groups_edit', { 'id': group.id }) }}">
-                            <i class="icon edit"></i>
+                            <i class="icon-edit"></i>
                             {{ 'Edit' | trans({}, 'ZymUserBundle') }}
                         </a>
                         {% endif %}
 
                         {% if is_granted('DELETE', group) %}
                         <a class="btn" href="{{ path('zym_user_groups_delete', { "id": group.id }) }}" data-toggle="ajax-modal">
-                            <i class="icon remove"></i>
+                            <i class="icon-remove"></i>
                             {{ 'Delete' | trans({}, 'ZymUserBundle') }}
                         </a>
                         {% endif %}
