--- a/src/Zym/Bundle/UserBundle/Resources/views/Users/edit.html.twig
+++ b/src/Zym/Bundle/UserBundle/Resources/views/Users/edit.html.twig
@@ -10,19 +10,33 @@
         </h1>
     </div>
 
-    <div class="btn-group">
-        <a class="btn" href="{{ path('zym_user_users') }}">{{ 'Users' | trans({}, 'ZymUserBundle') }}</a>
+    <div class="btn-toolbar">
+        <div class="btn-group">
+            <a class="btn" href="javascript: history.back()">
+                <i class="icon-arrow-left"></i> {{ 'Back' | trans({}, 'ZymUserBundle') }}
+            </a>
+        </div>
 
-        {% if is_granted('VIEW', user) %}
-        <a class="btn" href="{{ path('zym_user_users_show', { "id": user.id }) }}">{{ 'View' | trans({}, 'ZymUserBundle') }}</a>
-        {% endif %}
+        <div class="btn-group">
+            {% if is_granted('VIEW', user) %}
+            <a class="btn" href="{{ path('zym_user_users_show', { "id": user.id }) }}">
+                <i class="icon-share"></i> {{ 'View' | trans({}, 'ZymUserBundle') }}
+            </a>
+            {% endif %}
+        </div>
 
-        {% if is_granted('DELETE', user) %}
-        <a class="btn" href="{{ path('zym_user_users_delete', { "id": user.id }) }}">{{ 'Delete' | trans({}, 'ZymUserBundle') }}</a>
-        {% endif %}
+        <div class="btn-group">
+            {% if is_granted('DELETE', user) %}
+            <a class="btn" href="{{ path('zym_user_users_delete', { "id": user.id }) }}" data-toggle="ajax-modal">
+                <i class="icon-remove"></i> {{ 'Delete' | trans({}, 'ZymUserBundle') }}
+            </a>
+            {% endif %}
+        </div>
     </div>
 
-    <form action="" method="post" {{ form_enctype(form) }}>
+    <form class="form-horizontal" action="" method="post" {{ form_enctype(form) }}>
+        {{ form_errors(form) }}
+        
         <fieldset>
             <legend>User Information</legend>
             {{ form_row(form.firstName) }}
@@ -39,9 +53,8 @@
         {{ form_rest(form) }}
 
         <fieldset class="form-actions">
-             <input class="btn primary" type="submit" value="{{ 'Save changes' | trans({}, 'ZymUserBundle') }}" />
-             <a class="btn" href="{{ path('zym_user_users_show', { "id": user.id }) }}">{{ 'Cancel' | trans({}, 'ZymUserBundle') }}</a>
-
+            <button class="btn btn-primary" type="submit">{{ 'Save changes' | trans({}, 'ZymUserBundle') }}</button>
+            <button class="btn" onclick="history.back();">{{ 'Cancel' | trans({}, 'ZymUserBundle') }}</button>
          </fieldset>
     </form>
 {% endblock content %}
