--- a/src/Zym/Bundle/UserBundle/Resources/views/Users/show.html.twig
+++ b/src/Zym/Bundle/UserBundle/Resources/views/Users/show.html.twig
@@ -12,13 +12,15 @@
 
     <div class="btn-toolbar">
         <div class="btn-group">
-            <a class="btn" href="{{ path('zym_user_users') }}"><i class="icon arrow-left"></i> Users</a>
+        <a class="btn" href="javascript: history.back()">
+            <i class="icon-arrow-left"></i> {{ 'Back' | trans({}, 'ZymUserBundle') }}
+        </a>
         </div>
 
         <div class="btn-group">
             {% if is_granted('EDIT', user) %}
             <a class="btn" href="{{ path('zym_user_users_edit', { "id": user.id }) }}">
-                <i class="icon edit"></i> {{ 'Edit' | trans({}, 'ZymUserBundle') }}
+                <i class="icon-edit"></i> {{ 'Edit' | trans({}, 'ZymUserBundle') }}
             </a>
             {% endif %}
 
@@ -28,10 +30,10 @@
 
             <ul class="dropdown-menu">
                 <li>
-                    <a href="{{ path('zym_user_groups_add') }}"><i class="icon off"></i> {{ 'Disable User' | trans({}, 'ZymUserBundle') }}</a>
+                    <a href="{{ path('zym_user_groups_add') }}"><i class="icon-off"></i> {{ 'Disable User' | trans({}, 'ZymUserBundle') }}</a>
                 </li>
                 <li>
-                    <a href="{{ path('zym_user_groups_add') }}"><i class="icon lock"></i> {{ 'Activate User' | trans({}, 'ZymUserBundle') }}</a>
+                    <a href="{{ path('zym_user_groups_add') }}"><i class="icon-lock"></i> {{ 'Activate User' | trans({}, 'ZymUserBundle') }}</a>
                 </li>
 
 
@@ -40,7 +42,7 @@
 
                 <li>
                     <a href="{{ path('zym_user_users_delete', { "id": user.id }) }}" data-toggle="ajax-modal">
-                        <i class="icon remove"></i> {{ 'Delete' | trans({}, 'ZymUserBundle') }}
+                        <i class="icon-remove"></i> {{ 'Delete' | trans({}, 'ZymUserBundle') }}
                     </a>
                 </li>
                 {% endif %}
@@ -54,7 +56,7 @@
 
             <ul class="dropdown-menu">
                 <li>
-                    <a href="{{ path('fos_user_resetting_request', { "username": user.username }) }}"><i class="icon envelope"></i> {{ 'Send password' | trans({}, 'ZymUserBundle') }}</a>
+                    <a href="{{ path('fos_user_resetting_request', { "username": user.username }) }}"><i class="icon-envelope"></i> {{ 'Send password' | trans({}, 'ZymUserBundle') }}</a>
                 </li>
             </ul>
         </div>
@@ -62,7 +64,7 @@
         <div class="btn-group">
             {% if is_granted('ROLE_ALLOWED_TO_SWITCH', user) %}
             <a class="btn" href="{{ path('zym_user_users_show', { "id": user.id, "_switch_user": user.username }) }}">
-                <i class="icon user"></i> {{ 'Login as User' | trans({}, 'ZymUserBundle') }}
+                <i class="icon-user"></i> {{ 'Login as User' | trans({}, 'ZymUserBundle') }}
             </a>
             {% endif %}
         </div>
@@ -78,12 +80,12 @@
     <div class="row">
         <div class="span6">
             <dl>
-                {% if user.firstName is defined and user.lastName is defined %}
+                {% if user.firstName is defined and user.lastName is defined and (user.firstName|length > 0 or user.lastName|length > 0) %}
                     <dt>First Name</dt>
                     <dd>{{ user.firstName |e }}</dd>
                     <dt>Last Name</dt>
                     <dd>{{ user.lastName |e }}</dd>
-                {% elseif user.fullName is defined %}
+                {% elseif user.fullName is defined and user.fullName|length > 0%}
                     <dt>Name</dt>
                     <dd>{{ user.fullName |e }}</dd>
                 {% endif %}
@@ -94,17 +96,28 @@
                 {% endif %}
 
                 <dt>Email</dt>
-                <dd><a href="mailto:{{ user.email |url_encode }}">{{ user.email |e }}</a></dd>
+                <dd>
+                    <a href="mailto:{{ user.email |url_encode }}">{{ user.email |e }}</a>
+                </dd>
             </dl>
         </div>
 
         <div class="span6">
-            Enabled: {{ user.enabled ? 'Yes' : 'No'|trans({}, 'ZymUserBundle') }}<br />
-            Locked: {{ user.locked ? 'Yes' : 'No'|trans({}, 'ZymUserBundle') }}<br />
+            <dl>
+                <dt>Enabled</dt>
+                <dd>{{ user.enabled ? 'Yes' : 'No'|trans({}, 'ZymUserBundle') }}</dd>
+                
+                <dt>Locked</dt>
+                <dd>{{ user.locked ? 'Yes' : 'No'|trans({}, 'ZymUserBundle') }}</dd>
+                
+                <dt>Last Login</dt>
+                <dd>{{ user.lastLogin ? user.lastLogin.format(constant('DateTime::ISO8601')) : 'Never' }}</dd>
+                
+                <dt>Expired</dt>
+                <dd>{{ user.expired ? 'Yes' : 'No' | trans({}, 'ZymUserBundle') }}</dd>
+            </dl>
            {#} CreatedAt: {{ user.createdAt.format(constant('DateTime::ISO8601')) }}<br />
             UpdatedAt: {{ user.updatedAt.format(constant('DateTime::ISO8601')) }}<br />#}
-            Last Login:{{ user.lastLogin ? user.lastLogin.format(constant('DateTime::ISO8601')) : 'Never' }}<br />
-            Expired: {{ user.expired ? 'Yes' : 'No' | trans({}, 'ZymUserBundle') }}<br />
         </div>
     </div>
 
